<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Message_streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Zum Aktivieren den Bildschirm berühren</string>
    <string name="service_description">Dieser Service lässt Nachrichten abfangen, die in der Statusbar erscheinen.</string>
    <string name="options">Einstellungen</string>
    <string name="connect">Verbinden</string>
    <string name="manual_ip">manuell</string>
    <string name="zeroconf_ip">automatisch</string>
    <string name="filter_tbd">Filter folgt in Kürze</string>
    <string name="default_ip">192.168.1.18</string>
    <string name="not_connected">nicht verbunden</string>
    <string name="connected">verbunden!</string>
    <string name="state_inactive">Status: INAKTIV!</string>
    <string name="state_active">Status: aktiv.</string>

</resources>
